Updating buildspec file

--- a/buildspec/qa_conversion_tool.yaml
+++ b/buildspec/qa_conversion_tool.yaml
@@ -27,12 +27,8 @@ phases:
     on-failure: CONTINUE
     commands:
       - HOME="."
-      - echo "Checking out main branch..."
-      - git checkout main
       - echo "Get environment variables..."
       - aws ssm get-parameter --name /qppa/qa/env --with-decryption --region us-east-1 | jq -r .'Parameter'.'Value' > .env
-      - echo "Checking out to main branch..."
-      - git checkout main
       - BUILD_URL="https://us-east-1.console.aws.amazon.com/cloudwatch/home?region=us-east-1#logEvent:group=/aws/codebuild/qpp-qa-conversion-tool;stream=${CODEBUILD_LOG_PATH}"
       - JOB_URL="https://us-east-1.console.aws.amazon.com/codesuite/codebuild/${ACCOUNT_ID}/projects/qpp-qa-conversion-tool/build/${CODEBUILD_BUILD_ID}"
       - npm install
@@ -52,6 +48,7 @@ phases:
             DEV_JSON="{\"text\":\"Skipping \`test:dev\`, cannot reach host.\",\"color\":\"warning\"},"
           else
             echo "Run Conversion Tool test suite test:dev"
+            git checkout -f main
             npm run test:dev; EXITCODE=$?
             if [ $EXITCODE = 0 ]; then
               DEV_JSON="{\"text\":\"\`test:dev\` passed\",\"color\":\"good\"},"
@@ -67,6 +64,7 @@ phases:
             fi
           fi
           echo "Run Conversion Tool test suite test:impl"
+          git checkout -f main
           npm run test:impl; EXITCODE=$?
           if [ $EXITCODE = 0 ]; then
             IMP_JSON="{\"text\":\"\`test:impl\` passed\",\"color\":\"good\"},"
@@ -80,11 +78,11 @@ phases:
             IMP_REPORT_JSON=",{\"text\":\"\`test:impl\` report failed to upload to S3\",\"color\":\"danger\"}"
             JOB_FAILURE=1
           fi
+          if [ $JOB_FAILURE = 1 ]; then
+            ALERT_JSON=",{\"text\":\"<${ALERT_USER}> :point_up:\",\"color\":\"warning\"}"
+          fi
         else
           echo "Environment is not dev/impl/non-prod, so tests are not executed..."
-        fi
-        if [ $JOB_FAILURE = 1 ]; then
-          ALERT_JSON=",{\"text\":\"<${ALERT_USER}> :point_up:\",\"color\":\"warning\"}"
         fi
       - curl -X POST --fail --data-urlencode "payload={\"channel\":\"${SLACK_CHANNEL}\",\"attachments\":[${TITLE_JSON}${DEV_JSON}${DEV_REPORT_JSON}${IMP_JSON}${IMP_REPORT_JSON}${ALERT_JSON}]}" ${SLACK_URL}
       - exit $JOB_FAILURE
