Updated buildspec file and env values

--- a/.env.template
+++ b/.env.template
@@ -2,8 +2,8 @@
 COOKIE=xxxxxxxx
 IMPLTOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
-DEV_URL=https://dev.qpp.cms.gov
-IMPL_URL=https://imp.qpp.cms.gov
+URL_DEV=https://dev.qpp.cms.gov
+URL_IMP=https://imp.qpp.cms.gov
 
 # The environment to test in, can be one of: DEV or IMPL. Default environment set to IMPL
 TEST_ENV=IMP 
