--- a/buildspec/qa_conversion_tool.yaml
+++ b/buildspec/qa_conversion_tool.yaml
@@ -40,34 +40,39 @@ phases:
       - JOB_FAILURE=0
       - |
         if [ $ENV = "non-prod" ]; then
-          echo "Run Conversion Tool test suite test:dev"
-          npm run test:dev; EXITCODE=$?
-          if [ $EXITCODE = 0 ]; then
-            DEV_JSON="{\"text\":\"\`test:dev\` passed\",\"color\":\"good\"},"
+        echo "Run ping-test to make sure dev is reachable"
+          npm run ping-test:dev; EXITCODE=$?
+          if [ $EXITCODE != 0 ]; then
+            DEV_JSON="{\"text\":\"Skipping \`conversion-tool:dev\`, cannot reach host.\",\"color\":\"warning\"},"
           else
-            DEV_JSON="{\"text\":\"\`test:dev\` failed\",\"color\":\"danger\"},"
+          echo "Run Conversion Tool test suite conversion-tool:dev"
+          npm run conversion-tool:dev; EXITCODE=$?
+          if [ $EXITCODE = 0 ]; then
+            DEV_JSON="{\"text\":\"\`conversion-tool:dev\` passed\",\"color\":\"good\"},"
+          else
+            DEV_JSON="{\"text\":\"\`conversion-tool:dev\` failed\",\"color\":\"danger\"},"
             JOB_FAILURE=1
           fi
           echo "Send dev report to S3"
           ls -al
-          aws s3 cp ./reports/test-dev*.html s3://qppa-qa-reports-nonprod-${ACCOUNT_ID}-us-east-1/conversion-tool/dev/; EXITCODE=$?
+          aws s3 cp ./reports/conversion-tool-dev*.html s3://qppa-qa-reports-nonprod-${ACCOUNT_ID}-us-east-1/conversion-tool/dev/; EXITCODE=$?
           if [ $EXITCODE != 0 ]; then
-            DEV_REPORT_JSON="{\"text\":\"\`test:dev\` report failed to upload to S3\",\"color\":\"danger\"},"
+            DEV_REPORT_JSON="{\"text\":\"\`conversion-tool:dev\` report failed to upload to S3\",\"color\":\"danger\"},"
             JOB_FAILURE=1
           fi
-          echo "Run Conversion Tool test suite test:impl"
-          npm run test:impl; EXITCODE=$?
+          echo "Run Conversion Tool test suite conversion-tool:impl"
+          npm run conversion-tool:impl; EXITCODE=$?
           if [ $EXITCODE = 0 ]; then
-            IMP_JSON="{\"text\":\"\`test:impl\` passed\",\"color\":\"good\"},"
+            IMP_JSON="{\"text\":\"\`conversion-tool:impl\` passed\",\"color\":\"good\"},"
           else
-            IMP_JSON="{\"text\":\"\`test:impl\` failed\",\"color\":\"danger\"},"
+            IMP_JSON="{\"text\":\"\`conversion-tool:impl\` failed\",\"color\":\"danger\"},"
             JOB_FAILURE=1
           fi
           echo "Send impl report to S3"
           ls -al
-          aws s3 cp ./reports/test-impl*.html s3://qppa-qa-reports-nonprod-${ACCOUNT_ID}-us-east-1/conversion-tool/impl/; EXITCODE=$?
+          aws s3 cp ./reports/conversion-tool-impl*.html s3://qppa-qa-reports-nonprod-${ACCOUNT_ID}-us-east-1/conversion-tool/impl/; EXITCODE=$?
           if [ $EXITCODE != 0 ]; then
-            IMP_REPORT_JSON=",{\"text\":\"\`test:impl\` report failed to upload to S3\",\"color\":\"danger\"}"
+            IMP_REPORT_JSON=",{\"text\":\"\`conversion-tool:impl\` report failed to upload to S3\",\"color\":\"danger\"}"
             JOB_FAILURE=1
           fi
         else
